# todo-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  .taplo.toml  Justfile  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
docs/: DEVELOPER_GUIDE.md  USAGE_GUIDE.md
tests/: conftest.py  test_parse_str_to_date.py  test_target_date_parser.py
todo/: __main__.py  config.py  main.py
todo/db/: alembic.ini  core.py  management.py  types.py
todo/db/migrations/: env.py  script.py.mako
todo/db/migrations/versions/: 1716375182_17e8ccea664f_create_tasks_table.py  1717964304_3b5f55991509_create_checkboxes_table.py  1718043459_7c67cdb7408d_create_assertions_table.py  1718121034_727f8e9e7313_create_spaces_table.py  1718126512_6a552b8933bb_relate_spaces_and_tasks.py  1718134357_b06ea02f0232_create_update_updated_at_triggers.py  1718310185_c9877c6310fa_make_tasks_space_id_on_delete_cascade.py  1718311523_86e531eecd2b_create_prevent_default_space_deletion_trigger.py  1718436614_aab35dba9fe9_add_disabled_at_to_spaces.py  1718440198_bc131e6a2114_create_prevent_all_spaces_disabled_.py  1718440198_bc131e6a2114_create_prevent_all_spaces_disabled_trigger.py  1718442079_ca66626ab021_add_active_to_spaces.py  1718444111_15760d5d26d2_create_update_active_space_trigger.py  1718447326_d5f1b7b533a7_delete_prevent_all_spaces_disabled_trigger.py  1718462877_9e131aab3069_create_spaces_history_table.py  1718463031_d85183396ef7_create_active_space_change_trigger.py
todo/db/models/: __init__.py  assertion.py  base.py  checkbox.py  space.py  space_history_record.py  task.py
