[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli-vh"
version = "0.0.1"
description = "Manage your daily tasks directly from your terminal"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vlad Haiduk", email = "the.vladhaiduk@gmail.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Terminals",
  "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.3,<0.13.0",
  "SQLAlchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.1,<2.0.0",
  "pydantic>=2.7.1,<3.0.0",
  "pydantic-settings>=2.2.1,<3.0.0",
  "tomli>=2.0.1,<3.0.0",
]

[project.urls]
Repository = "https://github.com/vladhaidukkk/todo-cli"

[project.optional-dependencies]
dev = [
  "build>=1.2.1,<2.0.0",
  "twine>=5.1.0,<6.0.0",
  "pytest>=8.2.2,<9.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
  "faker>=25.8.0,<26.0.0",
  "pyright>=1.1.366,<2.0.0",
  "ruff>=0.4.8,<0.5.0",
  "pre-commit>=3.7.1,<4.0.0",
  "ipdb>=0.13.13,<0.14.0",
]

[project.scripts]
todo = "todo.main:app"

[tool.setuptools]
package-data = { "todo" = ["db/alembic.ini"] }

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
  "F",    # pyflakes
  "E",
  "W",    # pycodestyle
  "C90",  # mccabe
  "I",    # isort
  "N",    # pep8-naming
  "D",    # pydocstyle
  "UP",   # pyupgrade
  "ANN",  # flake8-annotations
  "S",    # flake8-bandit
  "BLE",  # flake8-blind-except
  "FBT",  # flake8-boolean-trap
  "B",    # flake8-bugbear
  "A",    # flake8-builtins
  "COM",  # flake8-commas
  "C4",   # flake8-comprehensions
  "T10",  # flake8-debugger
  "ISC",  # flake8-implicit-str-concat
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "Q",    # flake8-quotes
  "RSE",  # flake8-raise
  "RET",  # flake8-return
  "SLF",  # flake8-self
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "TCH",  # flake8-type-checking
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "ERA",  # eradicate
  "PGH",  # pygrep-hooks
  "PL",   # pylint
  "TRY",  # tryceratops
  "FLY",  # flynt
  "PERF", # perflint
  "RUF",  # ruff
]
ignore = [
  # ### Intentionally disabled ###
  "E501",   # line-too-long
  "D1",     # Missing docstrings in public objects
  "ANN1",   # Missing type annotations for self & cls
  "S101",   # assert
  "FBT001", # boolean-type-hint-positional-argument
  "PT011",  # pytest-raises-too-broad

  # ### Disabled due to incompatibility with another rule ###
  "D203", # one-blank-line-before-class
  "D213", # multi-line-summary-second-line

  # ### Disabled due to possible conflicts with fortammer ###
  "COM812", # missing-trailing-comma
  "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"todo/db/migrations/versions/*" = ["S608"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.format]
docstring-code-format = true
